--- a/JavaScript/Check Consonants/index.html
+++ b/JavaScript/Check Consonants/index.html
@@ -11,11 +11,14 @@
 <body>
     <div class="wrapper">
         <input type="text" id="inputName" placeholder="Name">
+        <input type="text" id="inputSurname" placeholder="Surname">
         <button onclick="findConsonants()">Submit</button>
-    </div>
-    <div class="output">
-        <p id="outputNumber"></p>
-        <p id="outputLetters"></p>
+        <div class="output">
+            <p id="outputNameNumber"></p>
+            <p id="outputNameLetters"></p>
+            <p id="outputSurnameNumber"></p>
+            <p id="outputSurnameLetters"></p>
+        </div>
     </div>
 </body>
 </html>
