--- a/JavaScript/Check Data/index.html
+++ b/JavaScript/Check Data/index.html
@@ -28,12 +28,12 @@
 
         <div class="additional-information">
             <div class="box">
-                <h2>Data gg/mm/aa: </h2>
-                <input type="text" id="data" placeholder="gg/mm/aa"/>
+                <h2>Anno di nascita: </h2>
+                <input type="text" id="date" placeholder="gg/mm/aa"/>
             </div>
             <div class="box">
                 <h2>Codice Fiscale: </h2>
-                <input type="text" id="cod_fiscale" placeholder="AAAAAAAAAAAAAAAA"/>
+                <input type="text" id="cod_fiscale" placeholder="AAAAAA0000"/>
             </div>
             <div class="box">
                 <h2>Citta provenienza: </h2>
