--- a/JavaScript/Array/index.html
+++ b/JavaScript/Array/index.html
@@ -10,6 +10,7 @@
 <body>
     <button onclick="array()">Search Max</button>
     <p id="out"></p>
+    <p id="outMax"></p>
 </body>
 <script src="script.js"></script>
 </html>
