--- a/JavaScript/8. Sen X/index.html
+++ b/JavaScript/8. Sen X/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <div class="container">
-        <input type="range" value="0" min="0" max="720" id="input" oninput="getSen()" />
+        <input value="0" type="range" min="0" max="720" id="input" oninput="getSen()" />
+        <br />
     </div>
-    <br><br><br>
     <div class="outputs">
-        <p>Grado: <span id="output1"></span> °</p>
-        <p>Coseno: <span id="output2"></span></p>
+        <p>Grado: <span id="output1"></span>°</p>
+        <p>Seno: <span id="output2"></span></p>
+        <p>Limite: <span id="output3"></span></p>
     </div>
 </body>
 </html>
