--- a/Php/1. Login/index.html
+++ b/Php/1. Login/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -17,14 +17,15 @@
     <section id="login">
         <h1>AUTENTIFICAZIONE</h1>
 
-        <br />
-        <form action="./index.php" name="autenticazione" method="POST">
+        <form action="./src/index.php" name="autenticazione" method="POST">
             Insert your Credentials
             <br />
             Email:
-            <input type="text" name="usernameLabel" />
+            <input type="text" value='ivan' name="usernameLabel"  tabindex="1"/>
+            <br />
             Password:
             <input type="password" name="passwordLabel" value="password" />
+            <br />
 
             <button name="btn_accedi" value="Accedi">Accedi</button>
             <button name="btn_annula" value="Annula">Annula</button>
