--- a/Php/1. Login/index.html
+++ b/Php/1. Login/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <nav>
-        <a href="#">Home</a>
+        <a href="./index.html">Home</a>
         <a href="#">Contact</a>
         <a href="#">Login</a>
     </nav>
@@ -19,6 +20,7 @@
 
         <form action="./src/index.php" name="autenticazione" method="POST">
             <h3>Insert your Credentials</h3>
+            <br />
 
             <input type="text" name="usernameLabel" placeholder="Username" />
             <br />
@@ -28,8 +30,8 @@
             <a href="#">Forgot password?</a>
 
             <div class="btn-container">
-                <button value="Accedi">ACEDI</button>
-                <button value="Annula">ANULLA</button>
+                <button type="submit" value="Accedi">ACEDI</button>
+                <button type="reset" value="Annula">ANULLA</button>
             </div>
             <!-- <button class="btn-signup">Registrati</button> -->
         </form>
