--- a/Php/1. Login/index.html
+++ b/Php/1. Login/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <nav>
@@ -30,10 +29,10 @@
             <a href="#">Forgot password?</a>
 
             <div class="btn-container">
-                <button type="submit" value="Accedi">ACEDI</button>
-                <button type="reset" value="Annula">ANULLA</button>
+                <button type="submit" value="Accedi" name="login">ACCEDI</button>
+                <button type="reset" value="Annula">ANNULLA</button>
             </div>
-            <!-- <button class="btn-signup">Registrati</button> -->
+            <button class="btn-signup" name="reg_user">Registrati</button>
         </form>
     </section>
 </body>
